<?xml version="1.0" encoding="utf-8"?>
<!-- fichier de layout pour le fragment result (ajout de resultat) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.result.AddResultFragment">

    <!-- TextField pour désigner le lieu de la course auto complete -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILPlace"
        app:startIconDrawable="@drawable/baseline_edit_location_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:hint="@string/hint_lieu_epreuve"
        app:helperText=""
        app:helperTextEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/idTIETPlaceAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:maxLength="30"
            android:maxLines="1"
            android:minHeight="48dp"
            android:labelFor="@+id/idTILPlace"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Liste déroulante des classes -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILClasses"
        app:startIconDrawable="@drawable/list_svgrepo_com"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_type_epreuve"
        android:inputType="none"
        app:helperText=""
        app:helperTextEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/idTVAutoClasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:minHeight="48dp"
            android:labelFor="@+id/idTILClasses"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILPos"
        app:startIconDrawable="@drawable/checkered_flag_svgrepo_com"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_place_obtenue"
        android:inputType="none"
        app:helperText=""
        app:helperTextEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/idTVAutoPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:minHeight="48dp"
            android:labelFor="@+id/idTILPos"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILPrts"
        app:startIconDrawable="@drawable/people_audience_svgrepo_com"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_partants"
        android:inputType="none"
        app:helperText=""
        app:helperTextEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/idTVAutoPrts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:minHeight="48dp"
            android:labelFor="@+id/idTILPrts"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/idBTAjouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/button_label_ajouter_resultat" />
</LinearLayout>