<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_result"
        android:icon="@drawable/baseline_playlist_add_24"
        android:title="@string/title_resultat" />

    <item
        android:id="@+id/navigation_season"
        android:icon="@drawable/baseline_table_rows_24"
        android:title="@string/title_saison" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/baseline_help_24"
        android:title="@string/title_aide" />
</menu>